--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <!-- index-mp-layout208:42-->
   <head>
     <!-- Meta Tags -->
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <meta
-      name="description"
-      content="Unlock a world of opportunities with Golden Diligent International Agency. Explore our specialized services in education counseling, visa assistance, immigration support, language proficiency, and more. Empowering students and professionals to thrive in the global workforce. Your journey to success begins here."
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+<meta
+  name="description"
+  content="Unlock global opportunities with Golden Diligent International Agency, specializing in study abroad services for the USA, Australia, Canada, and the UK. Explore our expert offerings in education counseling, visa assistance, immigration support, language proficiency, and more. Empowering students and professionals to thrive in the international workforce. Your journey to success begins with Golden Diligent - your trusted partner for overseas placements."
+/>
 
-    <meta
-      name="keywords"
-      content="Golden Diligent International Agency, study abroad, education counseling, visa assistance, immigration support, language proficiency, IELTS classes, student success stories, global opportunities, age care training, disability support, international career, global workforce,goldendiligent.com, goldendiligent, diligent,pte tests and exams,study abroad agency, work abroad, australia schools, canada, finland,agencies in eldoret, study and work abroad agencies in kenya,study and work abroad agencies in Eldoret,visa application, passport application eldoret, agents, qatar,diligent,study abroad, work abroad,courses abroad, how to study abroad,"
-    />
+<meta
+  name="keywords"
+  content="Golden Diligent International Agency, Golden Diligent, study abroad, education counseling, visa assistance, immigration support, language proficiency, IELTS classes, student success stories, global opportunities, aged care training, disability support, international career, global workforce, goldendiligent.com, diligent, PTE tests and exams, study abroad agency, work abroad, Australia schools, Canada, Finland, agencies in Eldoret, study and work abroad agencies in Kenya, study and work abroad agencies in Eldoret, visa application, passport application Eldoret, agents, Qatar, diligent, study abroad, work abroad, courses abroad, how to study abroad"
+/>
 
     <!-- Page Title -->
     <title>Golden Diligent International Agency</title>
@@ -2138,11 +2138,11 @@
                               required=""
                             >
                               <option value="">- Select Your Service -</option>
-                              <option value="Accounting Technoloiges">
+                              <option value="Education Counseling">
                                 Education Counseling
                               </option>
-                              <option value="Chemical Engineering">
-                                University Counseling
+                              <option value="Age care support & Disability Training">
+                               Age care support & Disability Training
                               </option>
                               <option value="Computer Technologies">
                                 Course Selection
