--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
                     <li>
                       <i class="fa fa-phone text-theme-colored"></i> Call Us at
                       <a href="tel:+254724512605"
-                        >+251956120546 +254707 238 325</a
+                        >+251956120546</a
                       >
                     </li>
                     <li>
                       <i class="fa fa-envelope-o text-theme-colored"></i>
                       <a href="mailto:support@goldendiligent.com:"
-                        >support@goldendiligent.com</a
+                        >endale@gmail.com</a
                       >
                     </li>
                   </ul>
