--- a/contact.html
+++ b/contact.html
@@ -249,7 +249,7 @@
               <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="icon-box left media bg-black-333 p-25 mb-20"> <a class="media-left pull-left" href="#"> <i class="pe-7s-map-2 text-theme-color-2"></i></a>
                   <div class="media-body"> <strong class="text-white">OUR OFFICE LOCATION</strong>
-                    <p class="text-white">Ronald Ngala street,<br>Khetias Building, 4th floor, Room7</p>
+                    <p class="text-white">Addis abeba ethiopia<br>METI Building, 8th floor</p>
                   </div>
                 </div>
               </div>
