--- a/contact.html
+++ b/contact.html
@@ -375,7 +375,7 @@
             <ul class="list-border">
               <li><a href="tel:+254724 512 605">+254724 512 605, +254707 238 325</a></li>
               <li><a href="mailto:support@goldendiligent.com">support@goldendiligent.com</a></li>
-              <li><a href="#" class="lineheight-20">Ronald Ngala street, Khetias Building, 4th floor, Room 7</a></li>
+              <li><a href="#" class="lineheight-20">Addis abeba, ethiopia ,METI Building, 8th floor</a></li>
             </ul>
             <p class="font-16 text-white mb-5 mt-15">Subscribe to our newsletter</p>
             <form id="footer-mailchimp-subscription-form" class="newsletter-form mt-10">
