--- a/contact.html
+++ b/contact.html
@@ -373,7 +373,7 @@
           <div class="widget dark">
             <h5 class="widget-title line-bottom">Quick Contact</h5>
             <ul class="list-border">
-              <li><a href="tel:+254724 512 605">+254724 512 605, +254707 238 325</a></li>
+              <li><a href="tel:+254724 512 605">+251956120546</a></li>
               <li><a href="mailto:support@goldendiligent.com">support@goldendiligent.com</a></li>
               <li><a href="#" class="lineheight-20">Addis abeba, ethiopia ,METI Building, 8th floor</a></li>
             </ul>
