--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                     </li>
                     <li>
                       <i class="fa fa-envelope-o text-theme-colored"></i>
-                      <a href="mailto:support@goldendiligent.com:"
-                        >endale@gmail.com</a
+                      <a href="mailto:Goldendiligent1@gmail.com:"
+                        >Goldendiligent1@gmail.com</a
                       >
                     </li>
                   </ul>
