--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   <ul class="list-inline sm-text-center mt-5">
                     <li>
                       <i class="fa fa-phone text-theme-colored"></i> Call Us at
-                      <a href="tel:+254724512605"
+                      <a href="tel:+251956120546"
                         >+251956120546</a
                       >
                     </li>
@@ -2637,12 +2637,12 @@
                 <ul class="list-border">
                   <li>
                     <a href="tel:+254724512605"
-                      >+254724 512 605, +254707 238 325</a
+                      >+251956120546</a
                     >
                   </li>
                   <li>
-                    <a href="mailto:support@goldendiligent.com"
-                      >support@goldendiligent.com</a
+                    <a href="mailto:Goldendiligent1@gmail.com"
+                      >Goldendiligent1@gmail.com</a
                     >
                   </li>
                   <li>
