--- a/about.html
+++ b/about.html
@@ -75,9 +75,9 @@
           <div class="col-md-8">
             <div class="widget no-border m-0">
               <ul class="list-inline">
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-white"></i> <a class="text-white" href="tel:+254724 512 605">+254724 512 605, +254707 238 325</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-white"></i> <a class="text-white" href="tel:+251956120546">+251956120546</a> </li>
                 <li class="text-white m-0 pl-10 pr-10"> <i class="fa fa-clock-o text-white"></i> Mon-Fri 8:00am to 5:00pm </li>
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-white"></i> <a class="text-white" href="mailto:support@goldendiligent.com">support@goldendiligent.com</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-white"></i> <a class="text-white" href="mailto:Goldendiligent1@gmail.com">Goldendiligent1@gmail.com</a> </li>
             </div>
           </div>
           <div class="col-md-4">
@@ -523,9 +523,9 @@
           <div class="widget dark">
             <h5 class="widget-title line-bottom">Quick Links</h5>
             <ul class="list-border">
-              <li><a href="#">+254724 512 605, +254707 238 325</a></li>
-              <li><a href="#">support@goldendiligent.com</a></li>
-              <li><a href="#" class="lineheight-20">Ronald Ngala street, Khetias Building, 4th floor, Room 7</a></li>
+              <li><a href="#">+251956120546</a></li>
+              <li><a href="#">Goldendiligent1@gmail.com</a></li>
+              <li><a href="#" class="lineheight-20">Addis Abeba, Ethiopia ,METI Building, 8th floor</a></li>
             </ul>
             <p class="font-16 text-white mb-5 mt-15">Subscribe to our newsletter</p>
             <form id="footer-mailchimp-subscription-form" class="newsletter-form mt-10">
